fix map flicker issue

--- a/src/component/Tracing/Tracing.scss
+++ b/src/component/Tracing/Tracing.scss
@@ -94,10 +94,6 @@
   .map-holder {
     flex: 1;
 
-    &>div {
-      height: 100%;
-    }
-
     .gm-fullscreen-control,
     .gmnoprint {
       display: none;
